# claimsflow

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.bat  demo.sh  demo_live.bat  demo_live.sh
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9e10fea3f92c_initial_schema.py
backend/claimsflow/: __init__.py
backend/claimsflow/api/: __init__.py  app.py  deps.py  middleware.py
backend/claimsflow/api/routes/: __init__.py  claims.py  demo.py  health.py  metrics.py  providers.py  queue.py  webhook.py
backend/claimsflow/cli/: __init__.py  main.py
backend/claimsflow/core/: __init__.py  config.py  db.py  logging.py
backend/claimsflow/models/: __init__.py  enums.py  orm.py  schemas.py
backend/claimsflow/pipeline/: __init__.py  base.py  cache.py  cost_calculation.py  decision_router.py  eligibility.py  eob.py  fraud_detection.py  medical_necessity.py  orchestrator.py  provider_validation.py
backend/claimsflow/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  router.py
backend/claimsflow/seed/: __init__.py  generators.py  reference_data.py
backend/tests/: test_api.py  test_cli.py  test_models.py  test_pipeline.py  test_providers.py  test_scaffold.py  test_seed.py
demo_claims/: 01_clean_approval.json  01b_clean_approval.json  01c_clean_approval.json  02_mismatch_human_review.json  03b_fraud_velocity.json  03c_fraud_velocity.json  03d_fraud_velocity.json  03e_fraud_velocity.json  03f_fraud_velocity.json  04_out_of_network.json
docker/: README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO_SCRIPT.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: Badge.tsx  ConfidenceMeter.tsx  DecisionDetail.tsx  DemoControls.tsx  EmptyState.tsx  EobModal.tsx  ExceptionSidePanel.tsx  HeroMetric.tsx  LiveActivityPanel.tsx  LiveBadge.tsx  Skeleton.tsx
frontend/src/lib/: api.ts  format.ts  hooks.ts  types.ts
frontend/src/pages/: ClaimDetail.tsx  ExceptionQueue.tsx  FraudQueue.tsx  (+3 more)
n8n/: README.md
tools/: demo_live_runner.py
