[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimsflow"
version = "0.1.0"
description = "AI-powered medical claims auto-adjudication pipeline (portfolio PoC)"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ClaimsFlow contributors" }]
keywords = ["healthcare", "claims", "adjudication", "llm", "agentic-ai", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",

    # Data
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # LLM
    "anthropic>=0.39.0",
    "openai>=1.40.0",

    # Misc
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.5.0",
    "faker>=27.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "types-requests",
]

[project.scripts]
claimsflow = "claimsflow.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["claimsflow"]

# ─────────────────────────── Tooling ───────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET"]
ignore = ["E501"]  # black handles line length

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=claimsflow --cov-report=term-missing"
markers = [
    "integration: opt-in tests that hit real LLM APIs (require keys in env)",
]
